# coach4sim

./: .gitignore  README.md  configure  readme
src/nubot/nubot/: package.xml
src/nubot/nubot_coach/: CMakeLists.txt  cyan_coach.sh  magenta_coach.sh
src/nubot/nubot_coach/include/nubot_coach/: coach2refbox.h  coach_dialog.h  packet2Refbox.h  robot2coach.h
src/nubot/nubot_coach/launch/: magenta_sim.launch  nubot_coach.launch
src/nubot/nubot_coach/src/: coach2refbox.cpp  coach_dialog.cpp  coach_dialog.ui  main.cpp  packet2Refbox.cpp  robot2coach.cpp
src/nubot/nubot_common/: CMakeLists.txt  package.xml
src/nubot/nubot_common/core/include/nubot/core/: DPoint.hpp  core.hpp
src/nubot/nubot_common/msgs/: CoachInfo.msg  RobotInfo.msg  StrategyInfo.msg  WorldModelInfo.msg
src/nubot/world_model/: CMakeLists.txt  package.xml
src/nubot/world_model/config/: nubot.conf  rtdb.ini  rtdb_sizeof_tmp.cpp
src/nubot/world_model/include/nubot/rtdb/: rtdb_user.h
src/nubot/world_model/include/nubot/world_model/: obstacles.h  robot.h  teammatesinfo.h  world_model.h
src/nubot/world_model/rtdb/: comm.cpp  read.cpp  rtdb_api.cpp  write.cpp
src/nubot/world_model/rtdb/parser/: CMakeLists.txt
src/nubot/world_model/src/: ball.cpp  obstacles.cpp  world_model.cpp
